[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Python utilities, Data preprocessing, Data manipulation
platforms = nt, posix
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Education
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
license_files = LICENSE

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    numpy
    pyproj
    Shapely
    pandas
    requests
    SQLAlchemy
    psycopg2

[options.package_data]
* = data/*

[options.packages.find]
exclude =
    tests
    *.tests
    tests.*
